# fastfind

./: CHANGELOG.md  Cargo.toml  ENVIRONMENT.md  GNU_FIND_COMPAT.md  GNU_FIND_COVERAGE.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: _build.yml  ci.yml  release.yml
bench_baseline/: baseline_bench.rs
benches/: corpus.rs  find_bench.rs
src/: cli.rs  eval.rs  expr.rs  lib.rs  parser.rs  walker.rs
tests/: actions.rs  basic.rs  filters.rs  operators.rs  symlinks.rs
tests/common/: mod.rs
