[package]
name = "fastfind"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Fast parallel find — a drop-in GNU find replacement for AI agents and large codebases"
repository = "https://github.com/awnion/fastfind"
keywords = ["find", "search", "parallel", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
jwalk = "0.8"
regex = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26"
serde_json = "1"
tempfile = "3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "find"

[[bench]]
name = "find_bench"
harness = false

[[bench]]
name = "baseline_bench"
path = "bench_baseline/baseline_bench.rs"
harness = false
required-features = ["baseline"]

[features]
baseline = []
